# openflash

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
openflash/: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  ROADMAP.md  SECURITY.md  clippy.toml
openflash/.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
openflash/.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
openflash/.github/ISSUE_TEMPLATE/: bug_report.md  chip_support.md  config.yml  feature_request.md
openflash/cli/: Cargo.toml
openflash/cli/src/: commands.rs  main.rs
openflash/core/: Cargo.toml
openflash/core/src/: ai.rs  ai_advanced.rs  analysis.rs  ecc.rs  hardware.rs  lib.rs  onfi.rs  protocol.rs  scripting.rs  spi_nand.rs  write_ops.rs
openflash/docs/: HARDWARE_GUIDE.md
openflash/docs/wiki/: FAQ.md  Getting-Started.md  Hardware-Setup.md  Home.md  Supported-Chips.md  Troubleshooting.md
openflash/firmware/rp2040/: Cargo.toml
openflash/firmware/rp2040/src/: main.rs  pio_nand.rs  spi_nand.rs  usb_handler.rs
openflash/firmware/stm32f1/: Cargo.toml
openflash/firmware/stm32f1/src/: main.rs  nand_gpio.rs  usb_handler.rs
openflash/gui/: package-lock.json  package.json
openflash/gui/src/: App.tsx  styles.css
openflash/gui/src-tauri/: Cargo.toml  tauri.conf.json
openflash/gui/src-tauri/src/: command.rs  config.rs  device.rs  flasher.rs  lib.rs  mock.rs
openflash/gui/src/components/: AiAnalysis.css  AiAnalysis.tsx  BitmapView.css  BitmapView.tsx  HexViewer.css  HexViewer.tsx
openflash/pyopenflash/: Cargo.toml
openflash/pyopenflash/src/: lib.rs
