[workspace]
members = [
    "core",
    "gui/src-tauri",
    # Firmware requires specific embassy versions, build separately
    # "firmware/rp2040",
    # "firmware/stm32f1",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies for the entire workspace
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
